fix on tablet again

--- a/css/style.scss
+++ b/css/style.scss
@@ -342,7 +342,7 @@ button {
                         }
                     }
                     &:nth-child(2) {
-                        margin-left: 150px;
+                        margin-left: 80px;
                     }
                 }
             }
